meta tag edited

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
     <meta property="og:image" content="photo2.jpeg">
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="mityung.com">
+    <meta property="twitter:domain" content="https://sak03.github.io/sartaj/">
     <meta property="twitter:url" content="https://sak03.github.io/sartaj/">
-    <meta name="twitter:title" content="MITYUNG | Healthtech | Data Analytics | IT Services">
+    <meta name="twitter:title" content="sartaj alam | web developer">
     <meta name="twitter:description"
-        content="MITYUNG is a leading healthcare IT and data analytics solutions with more than 13 years of experience in providing high-quality services at affordable prices.">
+        content="I'm a web developer. I developed lots of applications as well as websites.">
     <meta name="twitter:image" content="photo2.jpeg">
 
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/favicon.png" rel="apple-touch-icon">
+    <link href="photo2.jpeg" rel="icon">
+    <link href="photo2.jpeg" rel="apple-touch-icon">
 
     <link rel="canonical" href="https://sak03.github.io/sartaj/" />
 
