skills box shadow added

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <!-- code for skills data -->
     <h1 class="mx-5 my-3">Skills</h1>
     <div class="row mx-1">
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/react.jpg" class="card-img-top rounded-pill" title="React JS" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">ReactJS</h5>
@@ -141,7 +141,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/redux.png" class="card-img-top rounded-pill" title="Redux" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Redux</h5>
@@ -150,7 +150,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/axios.png" class="card-img-top rounded-pill" title="Axios" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Axios</h5>
@@ -159,7 +159,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/git.png" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Git/GitHub</h5>
@@ -168,7 +168,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/reactHelmet.png" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">React Helmet</h5>
@@ -177,7 +177,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/js.jpg" class="card-img-top rounded-pill" title="JavaScript" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">JavaScript</h5>
@@ -186,7 +186,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/bootstrap.jpg" class="card-img-top rounded-pill" title="Bootstrap" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Bootstrap</h5>
@@ -195,7 +195,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/primeReact.jpeg" class="card-img-top rounded-pill" title="Prime React" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Prime React</h5>
@@ -204,7 +204,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/coreui.jpg" class="card-img-top rounded-pill" title="Core UI" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Core UI</h5>
@@ -213,7 +213,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/material.png" class="card-img-top rounded-pill" title="Material UI" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">Material UI</h5>
@@ -222,7 +222,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-sm-12 col-md-4 col-lg-2 mt-2">
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
             <img src="images/html-css.jpg" class="card-img-top rounded-pill" title="HTML & CSS" alt="Error">
             <div class="card-body">
                 <h5 class="card-title">HTML & CSS</h5>
