new major project added

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <title>sartaj alam | web developer</title>
     <link rel="icon" class="rounded" href="photo2.jpeg">
 
-    <meta name="description"
-        content="I'm a web developer. I developed lots of applications as well as websites.">
+    <meta name="description" content="I'm a web developer. I developed lots of applications as well as websites.">
     <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://sak03.github.io/sartaj/">
     <meta property="og:type" content="website">
@@ -88,6 +87,8 @@
                             Major Projects
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item hovr" href="#student_registration">Student Registration App</a>
+                            </li>
                             <li><a class="dropdown-item hovr" href="#lifeSchool">Life School</a></li>
                             <li><a class="dropdown-item hovr" href="#centrikApp">Centrik-App</a></li>
                             <li><a class="dropdown-item hovr" href="#weather">Weather App </a></li>
@@ -319,8 +320,33 @@
     </div> <br>
 
     <!-- major project with external link -->
-    <a name="lifeSchool"></a>
+    <a name="student_registration"></a>
     <h1 class="mx-5 my-4">Major Projects</h1>
+    <div class="row mx-2">
+        <h3 class="card-title">Student Registration App</h3>
+        <div class="col-sm-12 col-md-8 col-lg-8">
+            <div class="card-body">
+                <p class="card-text">This is a simple student registration application. This is full stack application
+                    where NodeJS, ExpressJs and MongoDB is used in backend and ReactJS used in frontend. In
+                    this application, I made some RESTFull API and integrate in frontend.
+                    Some important featurs of this project are mentioned below:
+                <ul>
+                    <li>User frindly and easy to use.</li>
+                    <li>This is MERN Stack application.</li>
+                    <li>5 API is created and integrated.</li>
+                    <li>Registration, login, forgot password, get data and update data functionality added.</li>
+                    <li><a href="https://github.com/sak03/student-registration.git" target="blank">GitHub repositorie
+                            link
+                            >></a></li>
+                </ul>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-4">
+            <img src="https://source.unsplash.com/500x300/?student,forms,friends" class="img-fluid rounded" alt="...">
+        </div>
+    </div>
+    <a name="lifeSchool"></a>
     <div class="row mx-2">
         <h3 class="card-title">Life School</h3>
         <div class="col-sm-12 col-md-4 col-lg-4">
@@ -360,12 +386,10 @@
                     <li>Made by use of React, Axios and primeReact.</li>
                     <li>Uses the call users API and applied search parameter.</li>
                     <li>Fully responsive, functional and compatible for mobiles also.</li>
-                    <li><a href="https://github.com/sak03/weatherApp" target="blank">GitHub repositorie link
+                    <li><a href="https://github.com/sak03/centrik-app.git" target="blank">GitHub repositorie link
                             >></a></li>
                 </ul>
                 </p>
-                <!-- <a href="https://sak03.github.io/weatherApp/" class="btn btn-outline-primary" target="blank">Project
-                    preview</a> -->
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-4">
@@ -446,14 +470,13 @@
                     help to build web applications and websites for people all over the world. <br>
                     I love designing websites and functionalities of web applications, I'm looking for more
                     opportunities to work in coding. It's motivate me towards the world of coding. <br>
-                    Currently I'm working at
-                    <a href="https://www.mityung.com/" target="_blank">Mityung Infotech (p) Ltd.</a> as frontend web
-                    developer. <br />
-                    I did M.Tech(EE) in Power System and Drives from ZHCET, AMU, Aligarh and B.Tech in Electrical
-                    Engineering from JMI, New Delhi.
+                    As a Front-end Developer, my primary focus is on building visually appealing, responsive, and
+                    interactive websites/applications that provide an excellent user experience. I am committed to staying up to
+                    date with the latest front-end technologies and trends, and I am always looking for new and innovative
+                    ways to enhance the user experience.
                 </p>
                 <a class="btn btn-outline-info mx-5"
-                    href="https://drive.google.com/file/d/1Mvm6P50i-yQFuvxnh6DiOAbxBWpPFExX/view?usp=share_link"
+                    href="https://drive.google.com/file/d/1m_oe9eLQSEVzxR_esFtXnMscwt8dgf8I/view?usp=drive_link"
                     target="blank" role="button">Download Resume</a>
             </div>
         </div>
@@ -546,7 +569,7 @@
         <hr style="color: white;">
 
         <div class="d-flex align-items-center justify-content-between">
-            <p class="text-white mx-2"> &emsp; Copyright &copy; All rights reserved </p>
+            <p class="text-white mx-2"> &emsp; Copyright &copy;2023 All rights reserved </p>
             <p class="text-white mx-5">Maintained by: <a href="#" class="text-light hovr"
                     style="text-decoration: none;"> Sarta
                     Alam</a></p>
