new skills added

--- a/index.html
+++ b/index.html
@@ -170,11 +170,38 @@
             </div>
         </div>
         <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
-            <img src="images/reactHelmet.png" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
+            <img src="images/nodejs.jpg" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
             <div class="card-body">
-                <h5 class="card-title">React Helmet</h5>
+                <h5 class="card-title">NodeJS</h5>
                 <p class="card-text">
-                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
+            <img src="images/express.jpg" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">ExpressJS</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
+            <img src="images/mongodb.jpg" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">MongoDB</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
+            <img src="images/mySql.jpg" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">MySQL</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* *</span> * * *</small>
                 </p>
             </div>
         </div>
@@ -220,6 +247,15 @@
                 <h5 class="card-title">Material UI</h5>
                 <p class="card-text">
                     <small class="text-muted" style="font-size: 1.5rem;"><span>* * *</span> * *</small>
+                </p>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-4 col-lg-2 mt-2 shadow rounded">
+            <img src="images/reactHelmet.png" class="card-img-top rounded-pill" title="Git/GitHub" alt="Error">
+            <div class="card-body">
+                <h5 class="card-title">React Helmet</h5>
+                <p class="card-text">
+                    <small class="text-muted" style="font-size: 1.5rem;"><span>* * * *</span> *</small>
                 </p>
             </div>
         </div>
@@ -471,8 +507,10 @@
                     I love designing websites and functionalities of web applications, I'm looking for more
                     opportunities to work in coding. It's motivate me towards the world of coding. <br>
                     As a Front-end Developer, my primary focus is on building visually appealing, responsive, and
-                    interactive websites/applications that provide an excellent user experience. I am committed to staying up to
-                    date with the latest front-end technologies and trends, and I am always looking for new and innovative
+                    interactive websites/applications that provide an excellent user experience. I am committed to
+                    staying up to
+                    date with the latest front-end technologies and trends, and I am always looking for new and
+                    innovative
                     ways to enhance the user experience.
                 </p>
                 <a class="btn btn-outline-info mx-5"
