--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         style="font-family: 'Roboto', sans-serif; opacity: 0.9;">
         <div class="container-fluid">
             <a class="navbar-brand text-light hovr" href="#">SARTAJ ALAM</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
                 aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
